# ai-for-writing

./: .gitignore  README.md  package-lock.json
backend/: README.md  pyproject.toml
backend/src/official_proj/: __init__.py
backend/src/official_proj/api/: __init__.py  main.py
backend/src/official_proj/api/auth/: __init__.py  deps.py  jwt.py  token_store.py
backend/src/official_proj/api/routers/: __init__.py  auth.py  novel.py
backend/src/official_proj/api/schemas/: __init__.py  common.py  novel.py
backend/src/official_proj/config/: agents.yaml  tasks.yaml
backend/src/official_proj/crews/: __init__.py  chapter_crew.py  compete_crew.py
backend/src/official_proj/db/: __init__.py
backend/src/official_proj/db/mongo_db/: __init__.py  mongo.py
backend/src/official_proj/db/mongo_db/dao/: __init__.py  agent_log_dao.py  agent_task_output_dao.py  chapter_dao.py  chapter_review_dao.py  character_dao.py  character_state_dao.py  plot_summary_dao.py  (+1 more)
backend/src/official_proj/db/mysql_db/: __init__.py  mysql.py
backend/src/official_proj/schema/: __init__.py  json_tasks.py
backend/src/official_proj/services/: __init__.py  chapter_loop_runner.py  chapter_persist_service.py  character_state_persist_service.py  crew_persist_runner.py  knowledge_cleanup.py  llm_factory.py  novel_service.py  plot_memory_service.py  streaming_helpers.py  streaming_openai.py
backend/src/official_proj/utils/: __init__.py  task_outputs.py
backend/src/official_proj/vector/: __init__.py  embedding_service.py  milvus_client.py  milvus_schema.py  vector_memory_service.py
(+19 files in other folders)
